# shanhai-translate

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md  extension.toml
.github/workflows/: release.yml
scripts/: build-server-binary.sh  package-server-release-asset.sh
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
