[package]
name = "shanhai-translate-lsp-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
lsp-server = "0.7"
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
